headphones/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headphones
spec:
  replicas: 1
  selector:
    matchLabels:
      app: headphones
  template:
    metadata:
      labels:
        app: headphones
    spec:
      nodeSelector:
        kubernetes.io/hostname: k3s-basalt
      containers:
        - name: headphones
          image: lscr.io/linuxserver/headphones:latest
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "0Gi"
              cpu: "0"
          ports:
            - containerPort: 8181
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 8181
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8181
            initialDelaySeconds: 30
            periodSeconds: 10
          volumeMounts:
            - name: headphones-config
              mountPath: /config
            - name: headphones-downloads
              mountPath: /downloads
            - name: headphones-music
              mountPath: /music
      volumes:
        - name: headphones-config
          persistentVolumeClaim:
            claimName: headphones-config
        - name: headphones-downloads
          nfs:
            server: 192.168.1.126
            path: /mnt/user/Downloads
        - name: headphones-music
          nfs:
            server: 192.168.1.126
            path: /mnt/user/Media/Music
