headphones/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headphones
spec:
  selector:
    app: headphones
  ports:
    - protocol: TCP
      port: 8181
      targetPort: 8181
  type: ClusterIP
